Added Registration page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         </activity>
         <activity android:name=".RadioScreen" />
         <activity android:name=".AlarmScreen" />
-        <activity android:name=".NewsScreen"></activity>
+        <activity android:name=".NewsScreen" />
+        <activity android:name=".RegistrationActivity"> />
+        </activity>
         <receiver android:name=".AlarmReciever"/>
         <service android:name=".AlarmSongService"
             android:enabled="true"></service>
